--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,15 @@ img {
 
 .slide-wrapper {
   overflow: hidden;
+  padding-bottom: 50px;
 }
 
 .slide {
   display: flex;
+}
+
+.slide:hover {
+  will-change: transform;
 }
 
 .slide li {
@@ -26,4 +31,16 @@ img {
   flex-shrink: 0;
   max-width: 800px;
   margin: 0 20px;
+
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0px 1px 12px 5px rgba(172, 172, 182, 1);
+  opacity: .8;
+  transform: scale(.8);
+  transition: .4s;
+}
+
+.slide li.ativo {
+  opacity: 1;
+  transform: scale(1);
 }
